[tool.poetry]
name = "dana"
version = "0.1.0"
description = ""
authors = ["Dorkside <jdmartin@gmx.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.330"
streamlit = "^1.28.1"
openai = "^0.28.1"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
